[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psalign"
version = "0.1.0"
description = "A tool for (relative) mass alignment in mass spectrometry"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name="Thomas Vanhemel", email="thomas.vanhemel@kuleuven.be" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4,<2.0",
    "numba>=0.58",
    "scipy>=1.11",
    "tqdm>=4.65",
    "pyimzml>=1.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
